--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ ExportedObj/
 *.unityproj
 *.booproj
 
+
 # ============ #
 # OS generated #
 # ============ #
@@ -40,3 +41,4 @@ Thumbs.db
 *.pyc #python bytecode cache, for some plugins.
 sysinfo.txt #Unity3D Generated File On Crash Reports
 *.apk
+*.keystore
